Graph Nets tutorial update

--- a/tests/graph_nets_basics.ipynb
+++ b/tests/graph_nets_basics.ipynb
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Disclaimer**: The purpose of this tutorial isn't copy Deepmind's Graph Networks authors' code, but having experience with the library. Altought there are some adaptations of the original code, mainly to work with TensorFlow 2.0+, I do NOT own the code copyright."
+    "## **Disclaimer**: The purpose of this tutorial isn't copy Deepmind's Graph Networks authors' code, but having experience with the library. Althought there are some adaptations of the original code, mainly to work with TensorFlow 2.0+, I do NOT own the code copyright."
    ]
   },
   {
